add Car and main