@@ -9,18 +9,18 @@ public class Main {
         Car car3 = new Car(3, "BMW", "X5", 2012, "green", 95000, "AA6446AA");
         Car car4 = new Car(4, "BMW", "X6", 2017, "red", 99000, "AA6444AA");
 
-        List<Car> cars = Arrays.asList(car1, car2, car3, car4);
+        List<Car> cars = List.of(car1, car2, car3, car4);
 
         System.out.println("Список Машин марки Mercedes:");
-        List<Car> resultList1 = CarMethods.sortByCompany(cars, "Mercedes");
-        System.out.println(resultList1);
+        List<Car> result1 = CarMethods.sortByCompany(cars, "Mercedes");
+        System.out.println(result1);
 
         System.out.println("Список Машин марки BMW старше 4-х лет:");
-        List<Car> resultList2 = CarMethods.sortByCompanyAndYear(cars, "BMW", 4, 2020);
-        System.out.println(resultList2);
+        List<Car> result2 = CarMethods.sortByCompanyAndYear(cars, "BMW", 4, 2020);
+        System.out.println(result2);
 
         System.out.println("Список Машин 2012 года, дороже 100000:");
-        List<Car> resultList3 = CarMethods.sortByYearAndPrice(cars, 100000, 2012);
-        System.out.println(resultList3);
+        List<Car> result3 = CarMethods.sortByYearAndPrice(cars, 100000, 2012);
+        System.out.println(result3);
     }
 }
